ui changes to fix and align sign in view

--- a/src/component/CustomButton/CustomButton.css
+++ b/src/component/CustomButton/CustomButton.css
@@ -12,4 +12,6 @@
     justify-content: space-evenly;
     align-items: center;
     cursor: pointer;
+    border-radius: 12px;
+    
 }
